# cfb-ratings

./: .pre-commit-config.yaml  README.md  pyproject.toml  template.env
src/cfb_ratings/: __init__.py
