[project]
name = "cfb-ratings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jacob Baldwin", email = "baldwinj30@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.18.0",
    "requests>=2.32.3",
]

[project.scripts]
cfb-ratings = "cfb_ratings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.4",
]
